# rusty-color-shredder

./: Cargo.toml
config/: color.json  config.yaml  image.json
src/: main.rs  old.rs
