[package]
name = "rusty-color-shredder"
version = "0.2.1"
authors = ["gyatso"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
image = "0.24"
queues = "1.1"
rayon = "1.6"
palette = "0.6"
serde_json = "1.0"